<resources>
    <string name="app_name">The General Culture Quiz</string>
    <string name="next">Next</string>
    <string name="question_review">Question review</string>
    <string name="score_msg1">Do you have a brain ?</string>
    <string name="score_msg2">You really suck at this game.</string>
    <string name="score_msg3">You\'re almost not an idiot ;)</string>
    <string name="score_msg4">Not bad !</string>
    <string name="home">Home</string>
    <string name="replay">Replay</string>
    <string name="no_results">No Results</string>
    <string name="no_results_msg">Could not return results. The API doesn\'t have enough questions for your query.</string>
    <string name="invalid_parameter">Invalid Parameter</string>
    <string name="invalid_parameter_msg">Contains an invalid parameter. Arguments passed in aren\'t valid.</string>
    <string name="token_not_found">Token Not Found</string>
    <string name="token_not_found_msg">Session Token does not exist.</string>
    <string name="token_empty">Token Empty</string>
    <string name="token_empty_msg">Session Token has returned all possible questions for the specified query. Resetting the Token is necessary.</string>
    <string name="category">Category:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="correct_answer">Correct answer</string>
    <string name="history">History</string>
    <string name="info">Information</string>
    <string name="description">Description</string>
    <string name="description_content">This application is a general culture quiz using Open Trivia Database API (<a href="https://opentdb.com/">https://opentdb.com</a>). Therefore, you can have access to 3,559 verified questions and 3,291 pending questions, divided into 24 categories.\n\nThis application is an open source project, and all source code is available at this address: <a href="https://github.com/AlexandreLadriere/Android_The-general-culture-quiz">https://github.com/AlexandreLadriere/Android_The-general-culture-quiz</a> .</string>
    <string name="license">License</string>
    <string name="license_content"><![CDATA[ MIT License\n\nCopyright © 2019 Alexandre Ladrière\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.]]></string>
    <string name="author">Author</string>
    <string name="author_ladriere">Alexandre Ladrière</string>
    <string name="linkedin_ladriere"><a href="https://www.linkedin.com/in/alexandre-ladriere/">linkedin.com/in/alexandre-ladriere</a></string>
    <string name="github_ladriere"><a href="https://github.com/AlexandreLadriere">github.com/AlexandreLadriere</a></string>
    <string name="search">Search</string>
</resources>
