<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/a_info_linear_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/a_info_image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:tint="@color/colorTextThird"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_arrow_back_24px" />

        <TextView
            android:id="@+id/a_info_text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/info"
            android:textColor="@color/colorTextThird"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/a_info_image_view_dotted_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_info_linear_layout_top"
        app:srcCompat="@drawable/custom_dotted_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_info_image_view_dotted_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/a_info_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/description"
                android:textColor="@color/colorTextSecond"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/a_info_text_view_description_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:fontFamily="@font/nunito_sans"
                android:justificationMode="inter_word"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:text="@string/description_content"
                android:textColor="@color/colorTextThird"
                android:textColorLink="@color/colorTextThird"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/a_info_text_view_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/author"
                android:textColor="@color/colorTextSecond"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="20dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/a_info_constraint_layout_author"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_rectangle_text_second_cr20_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/a_info_text_view_author">

                <ImageView
                    android:id="@+id/a_info_image_view_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:focusable="false"
                    android:maxHeight="91dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ladriere" />

                <TextView
                    android:id="@+id/a_info_text_view_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/author_ladriere"
                    android:textColor="@color/colorTextThird"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/a_info_image_view_author"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/a_info_linear_layout_author_linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/a_info_image_view_author"
                    app:layout_constraintTop_toBottomOf="@+id/a_info_text_view_author_name">

                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_linkedin_white_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/linkedin_ladriere"
                        android:textColor="@color/colorTextThird"
                        android:textSize="12sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:autoLink="web"
                        android:textColorLink="@color/colorTextThird"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/a_info_image_view_author"
                    app:layout_constraintTop_toBottomOf="@+id/a_info_linear_layout_author_linkedin">

                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_github_logo_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/github_ladriere"
                        android:textColor="@color/colorTextThird"
                        android:textSize="12sp"
                        android:autoLink="web"
                        android:textColorLink="@color/colorTextThird"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/a_info_text_view_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/license"
                android:textColor="@color/colorTextSecond"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/a_info_text_view_license_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/license_content"
                android:textColor="@color/colorTextThird"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:autoLink="web"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>